login with google and web scraping with nodejs

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "start": "nodemon app.js"
     },
     "dependencies": {
+        "axios": "^1.4.0",
+        "cheerio": "^0.19.0",
         "express": "~4.13.3",
-        "request": "~2.67.0",
-        "cheerio": "~0.19.0"
+        "request": "~2.67.0"
     },
     "devDependencies": {
         "nodemon": "*"
